docs/reference/v1.2/syscon.rst
System Header
#############

Raspberry Pi CM4/5 configuration, debug and analog signals can be accessed in system (SYS) header J12. SYS headers pins, schematic signal names and description are given in Table 3.

.. table:: Table 3. SYS header (J12) pinout

  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | **Pin** | **Schematic signal name** | **Description**                                                                                                                                                                                             |
  +=========+===========================+=============================================================================================================================================================================================================+
  | 1       | GND                       | Ground (0V)                                                                                                                                                                                                 |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 2       | RPI_nRPIBOOT              | A low on this pin forces CM4/5 booting.                                                                                                                                                                     |
  |         |                           | To enable Raspberry Pi USB boot also place nRPIBOOT jumper on J12 pins 1-2.                                                                                                                                 |
  |         |                           |                                                                                                                                                                                                             |
  |         |                           | Place jumper on header J26 to switch Raspberry Pi USB from USB hub to USB C connector.                                                                                                                      |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 3       | GND                       | Ground (0V)                                                                                                                                                                                                 |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 4       | RPI_EEPROM_nWP            | CM4/5 on-board EEPROM write protect                                                                                                                                                                         |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 5       | RPI_AIP0                  | Analogue input (CM4) / USB CC1 (CM5)                                                                                                                                                                        |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 6       | RPI_AIP1                  | Analogue input (CM4) / USB CC2 (CM5)                                                                                                                                                                        |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 7       | GND                       | Ground (0V)                                                                                                                                                                                                 |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 8       | RPI_SYNC_IN               | IEEE1588 SYNC Input                                                                                                                                                                                         |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 9       | RPI_SYNC_OUT              | IEEE1588 SYNC Output                                                                                                                                                                                        |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 10      | RPI_RUN_PG                | RUN_PG pin when high signals that the CM4/5 has started. Driving this pin low resets the module.                                                                                                            |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 11      | RPI_PIN11                 | Video DAC output (CM4) / USB3 VBUS enable (CM5)                                                                                                                                                             |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 12      | GND                       | Ground (0V)                                                                                                                                                                                                 |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 13      | RPI_RUN_PG_BUFF           | Buffered (5V output) RPI_RUN_PG line. High signal indicates CM4 CPU is running. / Power button for CM5.                                                                                                     |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
  | 14      | RPI_GLOBAL_EN             | Drive low to power off CM4/5. A button between pins 13-14 can be used to wake up compute module from power down.                                                                                            |
  +---------+---------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+

